--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
         "monolog/monolog": "^2.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "^5.1"
+        "symfony/var-dumper": "^5.1",
+        "slevomat/coding-standard": "^6.3.6",
+        "squizlabs/php_codesniffer": "^3.6"
     }
 }
