--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,12 @@
     "require-dev": {
         "symfony/var-dumper": "^5.1",
         "slevomat/coding-standard": "^6.3.6",
-        "squizlabs/php_codesniffer": "^3.6"
+        "squizlabs/php_codesniffer": "^3.6",
+        "phpstan/phpstan": "^0.12.99"
+    },
+    "scripts": {
+        "cs-check": "phpcs -p ./src",
+        "cs-fix": "phpcbf ./src",
+        "stan": "phpstan analyse"
     }
 }
