--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,16 @@
         "symfony/var-dumper": "^5.1",
         "slevomat/coding-standard": "^6.3.6",
         "squizlabs/php_codesniffer": "^3.6",
-        "phpstan/phpstan": "^0.12.99"
+        "phpstan/phpstan": "^1.0"
     },
     "scripts": {
         "cs-check": "phpcs -p ./src",
         "cs-fix": "phpcbf ./src",
         "stan": "phpstan analyse"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
